# MindTV

./: .flake8  .gitignore  README.md
MindTV-Python/: environment.yml  headset_sim.py  main-debug.py  main.py  pyproject.toml
MindTV-Unity/Assets/: QuitGame.cs
MindTV-Unity/Assets/Code/: MISettingsUpdater.cs
MindTV-Unity/Assets/Fonts/: Lexend-Black SDF.asset  Lexend-Regular SDF.asset
MindTV-Unity/Assets/Prefabs/: BciControllerManager.prefab  Button.prefab  Cell.prefab  ConnectGroup.prefab  ConnectionStatus.prefab  ControllerManager.prefab  CreateLabelMenu Variant.prefab  CreateLabelMenu.prefab  CursorManager.prefab  GameController.prefab  GoBackButton.prefab  GoHomeButton.prefab  HorizontalSeparatingLine.prefab  HorizontalSeparator.prefab  Input-UITextWithLabel.prefab  Inventory.prefab  InventorySlot.prefab  LslManager.prefab  MISettings.prefab  MainMenuButton.prefab  MainVideoPageOptions.prefab  MarkerReceiverVisualGroup.prefab  MenuButtonGroup.prefab  SPOToyBox.prefab  SelectLabelMenu Variant.prefab  SelectLabelMenu.prefab  SimpleUnityMarkerReceiver.prefab  Subtitle.prefab  Tab.prefab  TabArea.prefab  TabVariantTraining.prefab  Title.prefab  TrainingMenu.prefab  TrainingObjectSPO 1.prefab  TrainingPage.prefab  TrainingPageArea.prefab  TrainingTabArea Variant.prefab  UI-Button.prefab  UI-Dropdown.prefab  UI-InputTextWithLabel.prefab  (+6 more)
MindTV-Unity/Assets/Scenes/: ActivityVideoPlayback.unity  Additive_ConnectivityMenu.unity  Default.unity  (+24 more)
MindTV-Unity/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
(+143 files in other folders)
